# goit-web-hw-07

./: alembic.ini  connect_db.py  models.py  my_select.py  pyproject.toml  seeds.py
