[tool.poetry]
name = "goit-web-hw-07"
version = "0.1.0"
description = ""
authors = ["murksss <mshkepast@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
faker = "^32.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
